# fountain-lsp

./: Cargo.toml  Makefile  test.fountain
fountain-lsp-core/: Cargo.toml
fountain-lsp-core/src/: lib.rs  main.rs
fountain-lsp-core/src/completion/: mod.rs
fountain-lsp-core/src/lsp/: handler.rs  mod.rs
fountain-lsp-core/src/parser/: mod.rs
openspec/changes/fountain-lsp-server/: design.md  proposal.md  tasks.md
openspec/changes/fountain-lsp-server/specs/completion/: spec.md
openspec/changes/fountain-lsp-server/specs/document-symbols/: spec.md
openspec/changes/fountain-lsp-server/specs/hover/: spec.md
openspec/changes/fountain-lsp-server/specs/syntax-highlighting/: spec.md
