[workspace]
members = ["fountain-lsp-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fountain LSP Team"]
license = "MIT"

[workspace.dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
betterfountain_rust = { path = "../../third/betterfountain-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"