[package]
name = "fountain-lsp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
betterfountain_rust.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true